# milo-usage-forecaster-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
launch/: hn_show_post.md  linkedin_post.md  linkedin_post_NEEDS_EDIT.md  reddit_r_claude_ai_post.md
src/milo_usage_forecaster/: __init__.py  __main__.py  budget_alert.py  forecast_engine.py  log_parser.py  optimization_recommender.py  payment.py  pricing_table.py  server.py  spike_detector.py  telemetry.py  tools.py
tests/: conftest.py  test_budget_alert.py  test_forecast_engine.py  test_log_parser.py  test_optimization_recommender.py  test_payment.py  test_server.py  test_spike_detector.py
tests/fixtures/: sample_claude_code_log.jsonl  sample_cursor_log.json
